tests/asm/error/param_direct_no_value.s
.name "zork"
.comment "I'M ]ALIIIIVE"


#live % have no value,
#r_asm reject is as lexical error
#our_asm accept it

le_12:

live	%1

liv: live %	#
	